--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
@@ -14,7 +14,7 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <i class='bx bxs-user' ></i>
+            <img src="/JeekobsSportCenter_ADMIN/Users/Admin.jpg" alt="">
          </div>
        </div>
 
@@ -75,6 +75,8 @@
      </div>
 
     <div class="container">
+
+      <div class="tag"><p>Orders > Completed</p></div>
 
       <div class="nav_bar">
         
@@ -148,8 +150,6 @@
       </table>
     </div>
   </div>
-
-    <div class="tag"><p>Orders > Completed</p></div>
     
     <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Orders_Completed.js"></script>
 </body>
